# LoccitaneProject

./: README.md  package-lock.json  package.json  tsconfig.json
LoccJar/: ExecutarApi.bat  LoccitaneDB.sql
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/Assets/svg/: BoxInBox.tsx
src/Components/BotãoThema/: index.tsx
src/Components/Cards/: CardInfoEstoque.tsx  CardInfoGestao.tsx  CardInfoPosicao.tsx  CardInfoProduto.tsx  index.tsx
src/Components/Fields/: Dropmenu.tsx  Filtro.tsx  Orderna.tsx  SearchField.tsx  SelectNivel.tsx  SelectPosition.tsx  SelectRua.tsx
src/Components/Header/: index.tsx  style.ts
src/Components/Loading/: index.tsx
src/Components/Menssager/: FormEstoque.tsx  MiniArlet.tsx  ModalDescricaoEstoque.tsx  ModalForm.tsx  ModalView.tsx  index.ts
src/Components/Sidebar/: index.tsx  style.ts
src/Components/Texts/: index.ts
src/Context/: ContextPosicoes.tsx  ContextProdutos.tsx  ContextToast.tsx  DadosPut.tsx  ReactQuery.tsx  ToggleSideBar.tsx  ToggleThemes.tsx  index.tsx
src/Hooks/: useApiOnError.ts  useOrdenar.ts
src/Pages/Home/Configuracoes/: index.tsx
src/Pages/Home/Dados/: index.tsx
src/Pages/Home/Estoque/: index.tsx  style.ts
src/Pages/Login/: index.tsx  style.ts
src/Routes/: routes.tsx
src/Routes/Authentication/: AuthProvider.tsx  ProtectedRoute.ts
src/Styles/: global-styles.ts
src/Styles/Colors/: index.ts
src/Styles/Layouts/: index.tsx
src/Styles/Themes/: Dark.ts  Light.ts  index.ts
src/Utils/Api/: index.ts
src/Utils/Connections/: Delete.ts  Get.ts  Post.ts  Put.ts
(+20 files in other folders)
