[package]
name = "front-end"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-set-position", "window-set-min-size", "window-unminimize", "window-hide", "window-show", "window-set-decorations", "window-set-size", "window-maximize", "window-set-max-size", "window-unmaximize", "window-set-title", "window-set-fullscreen", "window-set-resizable", "window-set-always-on-top", "window-close", "window-create", "window-minimize", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
